# Frostform-Engine

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: release.yml
include/core/: Background.hpp  Circle.hpp  Collider.hpp  Game.hpp  GameObject.hpp
include/core/enums/: DrawLayers.hpp  InputActions.hpp
include/core/managers/: BaseManager.hpp  CollisionManager.hpp  DrawManager.hpp  EnemyManager.hpp  InputManager.hpp  UIManager.hpp
include/pong/: Ball.hpp  Paddle.hpp  PongGame.hpp  ScoreUI.hpp
include/spaceInvaders/: Bullet.hpp  Invader.hpp  SpaceInvaders.hpp  SpaceShip.hpp
include/utility/: FVector2.hpp
scripts/: build.ps1
src/: main.cpp
src/core/: Background.cpp  Circle.cpp  Collider.cpp  Game.cpp  GameObject.cpp
src/core/managers/: BaseManager.cpp  CollisionManager.cpp  DrawManager.cpp  EnemyManager.cpp  InputManager.cpp  UIManager.cpp
src/pong/: Ball.cpp  Paddle.cpp  PongGame.cpp  ScoreUI.cpp
src/spaceInvaders/: Bullet.cpp  Invader.cpp  SpaceInvaders.cpp  SpaceShip.cpp
src/utility/: FVector.cpp
